feat: numpy data concatenation examples

--- a/notebooks/sn07_combining_datasets.ipynb
+++ b/notebooks/sn07_combining_datasets.ipynb
@@ -347,6 +347,207 @@
     "# Filter out orders not present in `orders` list by checkitn\n",
     "sum(price * quantity for _, date, _, _, _, price, quantity in order_details_right if date != None)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c91aeb71-ec59-49f4-9610-ae13b635d5dc",
+   "metadata": {},
+   "source": [
+    "## Concatenating NumPy Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6c7bf128-fdf3-4933-9e4f-4be84fcc021e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2700, 3000, 3000],\n",
+       "       [2600, 2800, 2800],\n",
+       "       [2300, 2500, 2500]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "jeff_salary = [2700, 3000, 3000]\n",
+    "nick_salary = [2600, 2800, 2800]\n",
+    "tom_salary = [2300, 2500, 2500]\n",
+    "\n",
+    "base_salary1 = np.array([jeff_salary, nick_salary, tom_salary])\n",
+    "display(base_salary1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b628098a-882a-44b2-a3af-0f892e8aabbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2200, 2400, 3000],\n",
+       "       [2500, 2700, 2700]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "maya_salary = [2200, 2400, 3000]\n",
+    "john_salary = [2500, 2700, 2700]\n",
+    "\n",
+    "base_salary2 = np.array([maya_salary, john_salary])\n",
+    "display(base_salary2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a4c46e08-f7d9-4574-af52-d4de13e70484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2700, 3000, 3000],\n",
+       "       [2600, 2800, 2800],\n",
+       "       [2300, 2500, 2500],\n",
+       "       [2200, 2400, 3000],\n",
+       "       [2500, 2700, 2700]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "base_salary = np.concatenate((base_salary1, base_salary2), axis=0) # axis=0 concatenates vertically\n",
+    "display(base_salary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07b927fa-e087-4ac4-bd6b-904332666147",
+   "metadata": {},
+   "source": [
+    "With both salary arrays merged into one, we can now open scenario for a case where a single month salary per employee is also introduced.\n",
+    "In this case we want to concatenate an array of salaries that holds the same order as of employees."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c99a4a45-f87d-4d5a-b9cc-e242f97a505f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Introduces a new month salary for each employee where each item (array in the 2nd dimension) belongs to an employee\n",
+    "new_month_salary = [\n",
+    "    [3000],\n",
+    "    [2900],\n",
+    "    [2500],\n",
+    "    [2500],\n",
+    "    [2700]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ed678c17-6ece-4b47-b31d-827232dff8c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2700, 3000, 3000, 3000],\n",
+       "       [2600, 2800, 2800, 2900],\n",
+       "       [2300, 2500, 2500, 2500],\n",
+       "       [2200, 2400, 3000, 2500],\n",
+       "       [2500, 2700, 2700, 2700]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Concatenates the `new_month_salary` to the `base_salary` array. Uses axis=1 to concatenate horizontally\n",
+    "base_salary = np.concatenate((base_salary, new_month_salary), axis=1)\n",
+    "display(base_salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ba4aee1-389f-494e-b25d-3278e6219ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2700, 3000, 3000, 3000, 3000, 3200],\n",
+       "       [2600, 2800, 2800, 2900, 2900, 2900],\n",
+       "       [2300, 2500, 2500, 2500, 2500, 2900],\n",
+       "       [2200, 2400, 3000, 2500, 3000, 3000],\n",
+       "       [2500, 2700, 2700, 2700, 2900, 2900]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "upcoming_months = [\n",
+    "    [3000, 3200],\n",
+    "    [2900, 2900],\n",
+    "    [2500, 2900],\n",
+    "    [3000, 3000],\n",
+    "    [2900, 2900],\n",
+    "]\n",
+    "\n",
+    "base_salary = np.concatenate((base_salary, upcoming_months), axis=1)\n",
+    "display(base_salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4c73221b-625b-40cd-a305-32a3a4e3dda3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2700, 3000, 3000, 3000, 3000, 3200],\n",
+       "       [2600, 2800, 2800, 2900, 2900, 2900],\n",
+       "       [2300, 2500, 2500, 2500, 2500, 2900],\n",
+       "       [2200, 2400, 3000, 2500, 3000, 3000],\n",
+       "       [2500, 2700, 2700, 2700, 2900, 2900],\n",
+       "       [   0,    0,    0,    0,    0, 2900]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "new_employee_salary = [\n",
+    "    [0, 0, 0, 0, 0, 2900]\n",
+    "]\n",
+    "\n",
+    "base_salary = np.concatenate((base_salary, new_employee_salary), axis=0)\n",
+    "display(base_salary)"
+   ]
   }
  ],
  "metadata": {
